--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ Source/jewelry/jewelry/obj/Debug/jewelry.csprojAssemblyReference.cache
 Source/jewelry/jewelry/obj/Debug/jewelry.dll
 Source/jewelry/jewelry/Properties/AssemblyInfo.cs
 Source/jewelry/jewelry/ThoughWorker_WearingApparel.cs
+error.txt
