--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ Source/jewelry/jewelry/obj/Debug/jewelry.dll
 Source/jewelry/jewelry/Properties/AssemblyInfo.cs
 Source/jewelry/jewelry/ThoughWorker_WearingApparel.cs
 error.txt
+*.txt
