--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ Source/jewelry/jewelry/Properties/AssemblyInfo.cs
 Source/jewelry/jewelry/ThoughWorker_WearingApparel.cs
 error.txt
 *.txt
+error.txt
